--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "html-pdf": "^2.2.0",
     "method-override": "^3.0.0",
+    "mongodb": "^3.2.7",
     "mongoose": "^5.3.10",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pdfkit": "^0.10.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
