--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "html-pdf": "^2.2.0",
+    "jquery": "^3.4.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.3.10",
